# rag-frontend

./: package-lock.json
backend/: .env.dist  Cargo.toml  readme.md
backend/scraped_data/: admission_gatech_edu.md  admission_gatech_edu_62_and_older_program.md  admission_gatech_edu_academics.md  admission_gatech_edu_admission_snapshot.md  admission_gatech_edu_appeal.md  admission_gatech_edu_apply_documents.md  admission_gatech_edu_check_application_status.md  admission_gatech_edu_contact.md  admission_gatech_edu_discipline_review.md  admission_gatech_edu_discover_georgia_tech.md  admission_gatech_edu_dual_enrollment.md  admission_gatech_edu_dual_enrollment_distance_computer_science.md  admission_gatech_edu_dual_enrollment_distance_math.md  admission_gatech_edu_first_year.md  admission_gatech_edu_first_year_academic_preparation.md  admission_gatech_edu_first_year_advanced_course_credit.md  admission_gatech_edu_first_year_application_fees.md  admission_gatech_edu_first_year_application_review.md  admission_gatech_edu_first_year_contribution_to_community.md  admission_gatech_edu_first_year_deadlines.md  admission_gatech_edu_first_year_decision_outcomes.md  admission_gatech_edu_first_year_emergency_deadline_extension.md  admission_gatech_edu_first_year_institutional_fit.md  admission_gatech_edu_first_year_interview.md  admission_gatech_edu_first_year_major_selection.md  admission_gatech_edu_first_year_personal_essays.md  admission_gatech_edu_first_year_recommendations.md  admission_gatech_edu_first_year_standardized_tests.md  admission_gatech_edu_international_first_year.md  (+613 more)
(+22 files in other folders)
